--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,18 +1,23 @@
-﻿<Window x:Class="ReportComparison.MainWindow"
+<Window x:Class="ReportComparison.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ReportComparison"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="#000080">
-	<Grid HorizontalAlignment="Center" VerticalAlignment="Top">
+        Title="MainWindow" Height="400" Width="780" Background="Black">
+	<Grid >
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="200"/>
+			<ColumnDefinition Width="100"/>
+			<ColumnDefinition Width="100"/>
 			<ColumnDefinition Width="Auto"/>
 			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="200"/>
-			
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+			<ColumnDefinition Width="Auto"/>
+
+
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="100"/>
@@ -20,19 +25,32 @@
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="20"/>
-			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<TextBlock x:Name="Report_1" Grid.Column="0" Grid.Row="0"  Foreground="#fff700" HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="Report One" FontSize="30" RenderTransformOrigin="-2.267,0.001"/>
-		<TextBlock x:Name="Report_2" Grid.Column="4" Grid.Row="0"  Foreground="#fff700" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Report Two" VerticalAlignment="Top"  FontSize="30"/>
-		<Button x:Name="AddFile1" Content="Add File" Grid.Row="1" HorizontalAlignment="Center"  VerticalAlignment="Top"  Foreground="#000080" FontSize="20" Click="Button_Click_File1"/>
-		<Button x:Name="AddFile2" Content="Add File" Grid.Row="1" Grid.Column="4" HorizontalAlignment="Center"  VerticalAlignment="Top"  Foreground="#000080" FontSize="20" Click="Button_Click_File2"/>
-		<CheckBox x:Name ="ConfigSelect" Padding="4,0,0,0" Grid.Row="3" Grid.Column="1"  Foreground="#fff700" FontSize="18" Content="Configuration Settings" VerticalContentAlignment="Center" HorizontalAlignment="Center" Height="30" Checked="AddOrRemoveComparator_Config"/>
-		<CheckBox x:Name ="ParmSelect" Padding="4,0,0,0" Grid.Row="4" Grid.Column="1"  Foreground="#fff700" FontSize="18" Content="Parameter Settings" VerticalContentAlignment="Center" HorizontalAlignment="Center" Height="30" Checked="AddOrRemoveComparator_Parm"/>
-		<Button x:Name="CompareButton" Content="Compare Reports" Grid.Row="6" Grid.Column="1" Width="300" HorizontalAlignment="Center"  VerticalAlignment="Top"  Foreground="#000080" FontSize="20" />
-		<TextBlock x:Name="ZipFile1Name" Grid.Column="0" Grid.Row="1"  Foreground="#fff700" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
-		<TextBlock x:Name="ZipFile2Name" Grid.Column="3" Grid.Row="1"  Foreground="#fff700" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
+		<TextBlock x:Name="Report_1" Grid.Column="0" Grid.Row="0" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Report List" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="56,2,0,0" Grid.ColumnSpan="2"/>
+
+		<Button x:Name="AddFile" Content="Add File" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" Click="AddItem" Margin="69,37,0,0" RenderTransformOrigin="0.021,0.404" Grid.ColumnSpan="2"/>
+
+		<CheckBox x:Name ="ConfigSelect" Padding="4,0,0,0"  Foreground="White" FontSize="14" Content="Configuration Settings" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="20,53,0,42" Grid.Row="1" Grid.ColumnSpan="2"/>
+		<CheckBox x:Name ="ParmSelect" Padding="4,0,0,0"  Foreground="White" FontSize="14" Content="Parameter Settings" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="30"  Margin="29,32,0,63" Grid.Row="1" Grid.ColumnSpan="2"/>
+		<Button x:Name="CompareButton" Content="Compare Reports" Grid.Row="1" Width="139" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" Click="Compare" Margin="33,92,0,0" Grid.ColumnSpan="2"/>
+		<TextBlock x:Name="ZipFile1Name" Grid.Column="0" Grid.Row="1"  Foreground="White" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
+		<TextBlock x:Name="ZipFile2Name" Grid.Column="3" Grid.Row="1"  Foreground="White" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
+		<Button x:Name="HelpButton" Content="Help" Grid.Row="4" Width="110" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="20" Margin="2,99,0,0" Grid.Column="2" Click="RunFileWindow"/>
+
+		<ListView x:Name="ReportList" FontSize="14" MaxHeight="180" Margin="81,-9,-203,34" Grid.ColumnSpan="7" Grid.RowSpan="2" Background="White" Grid.Column="1" />
+		<TextBlock x:Name="ComparisonTypes"  Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Settings to Compare" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="24,10,0,0" Grid.Row="1" Grid.ColumnSpan="2"/>
+		<Button x:Name="RemoveFile" Content="Remove File" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" RenderTransformOrigin="0.021,0.404" Margin="59,69,0,0" Click="RemoveItem" Grid.ColumnSpan="2"/>
+		<TextBox x:Name="Date" Grid.Column="3" Grid.Row="2" Width="150" Margin="0,0,15,0"/>
+		<TextBox x:Name="Nickname" Grid.Column="2" Grid.Row="2" Width="150" Margin="0,0,15,0" />
+		<TextBlock x:Name="NicknameHeader"  Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="Nickname" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="0,92,0,0" Grid.Row="1" Grid.Column="2"/>
+		<TextBlock x:Name="DateHeader"  Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Date" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="59,92,0,0" Grid.Row="1" Grid.Column="3"/>
+
 
 	</Grid>
+
+
+
+
+
 </Window>
