--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,53 +1,104 @@
-<Window x:Class="ReportComparison.MainWindow"
+<Window x:Class="ReportParmandConfigTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ReportComparison"
+        xmlns:local="clr-namespace:ReportParmandConfigTool"
         mc:Ignorable="d"
-        Title="MainWindow" Height="400" Width="780" Background="Black">
-	<Grid >
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="100"/>
-			<ColumnDefinition Width="100"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
+        Title="MainWindow" Height="400" Width="1050" Background="Black">
+  <Grid >
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="50"/>
+      <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="20"/>
+      <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="20"/>
+      <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="20"/>
+      <ColumnDefinition Width="Auto"/>
 
 
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="100"/>
-			<RowDefinition Height="125"/>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-		</Grid.RowDefinitions>
 
-		<TextBlock x:Name="Report_1" Grid.Column="0" Grid.Row="0" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Report List" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="56,2,0,0" Grid.ColumnSpan="2"/>
-
-		<Button x:Name="AddFile" Content="Add File" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" Click="AddItem" Margin="69,37,0,0" RenderTransformOrigin="0.021,0.404" Grid.ColumnSpan="2"/>
-
-		<CheckBox x:Name ="ConfigSelect" Padding="4,0,0,0"  Foreground="White" FontSize="14" Content="Configuration Settings" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="20,53,0,42" Grid.Row="1" Grid.ColumnSpan="2"/>
-		<CheckBox x:Name ="ParmSelect" Padding="4,0,0,0"  Foreground="White" FontSize="14" Content="Parameter Settings" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="30"  Margin="29,32,0,63" Grid.Row="1" Grid.ColumnSpan="2"/>
-		<Button x:Name="CompareButton" Content="Compare Reports" Grid.Row="1" Width="139" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" Click="Compare" Margin="33,92,0,0" Grid.ColumnSpan="2"/>
-		<TextBlock x:Name="ZipFile1Name" Grid.Column="0" Grid.Row="1"  Foreground="White" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
-		<TextBlock x:Name="ZipFile2Name" Grid.Column="3" Grid.Row="1"  Foreground="White" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
-		<Button x:Name="HelpButton" Content="Help" Grid.Row="4" Width="110" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="20" Margin="2,99,0,0" Grid.Column="2" Click="RunFileWindow"/>
-
-		<ListView x:Name="ReportList" FontSize="14" MaxHeight="180" Margin="81,-9,-203,34" Grid.ColumnSpan="7" Grid.RowSpan="2" Background="White" Grid.Column="1" />
-		<TextBlock x:Name="ComparisonTypes"  Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Settings to Compare" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="24,10,0,0" Grid.Row="1" Grid.ColumnSpan="2"/>
-		<Button x:Name="RemoveFile" Content="Remove File" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" RenderTransformOrigin="0.021,0.404" Margin="59,69,0,0" Click="RemoveItem" Grid.ColumnSpan="2"/>
-		<TextBox x:Name="Date" Grid.Column="3" Grid.Row="2" Width="150" Margin="0,0,15,0"/>
-		<TextBox x:Name="Nickname" Grid.Column="2" Grid.Row="2" Width="150" Margin="0,0,15,0" />
-		<TextBlock x:Name="NicknameHeader"  Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="Nickname" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="0,92,0,0" Grid.Row="1" Grid.Column="2"/>
-		<TextBlock x:Name="DateHeader"  Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Date" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="59,92,0,0" Grid.Row="1" Grid.Column="3"/>
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="25"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="25"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="20"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="25"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="25"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="50"/>
+      <RowDefinition Height="Auto"/>
+    </Grid.RowDefinitions>
 
 
-	</Grid>
+
+    <Button x:Name="AddFile1" Content="Add Report" HorizontalAlignment="Left" Foreground="black" FontSize="14" Height="23" Click="AddItem" Grid.Column="5" Grid.Row="5" VerticalAlignment="Center" Width="130"/>
+
+    <Button x:Name="AddFile2" Height="23"  Content="Add Report" HorizontalAlignment="Left" Foreground="black" FontSize="14" Click="AddItem" Grid.Column="5" Grid.Row="7" VerticalAlignment="Center" Width="130"/>
+
+    <Button x:Name="AddFile3" Height="23" Content="Add Report" HorizontalAlignment="Left" Foreground="black" FontSize="14" Click="AddItem" Grid.Column="5" Grid.Row="9" VerticalAlignment="Center" Width="130"/>
+
+
+
+    <Button x:Name="RemoveFile1" Content="Remove Report" HorizontalAlignment="Left" Foreground="black" FontSize="14" Height="23"  Click="RemoveItem" Grid.Column="7" Grid.Row="5" VerticalAlignment="Center" Width="130"/>
+
+    <Button x:Name="RemoveFile2" Content="Remove Report" HorizontalAlignment="Left" Foreground="Black" FontSize="14" Height="23"  Click="RemoveItem" Grid.Column="7" Grid.Row="7" VerticalAlignment="Center" Width="130"/>
+
+    <Button x:Name="RemoveFile3" Content="Remove Report" HorizontalAlignment="Left" Foreground="black" FontSize="14" Height="23"  Click="RemoveItem" Grid.Column="7" Grid.Row="9" VerticalAlignment="Center" Width="130"/>
+
+    <Button x:Name="CompareReportsButtonParm" Height="25"  Content="Compare by Parameters" Foreground="black" FontSize="14" Grid.Column="3" HorizontalAlignment="Right" Grid.Row="11" VerticalAlignment="Center" Width="170" Click="CompareReports"/>
+
+    <Button x:Name="CompareReportsButtonConfig" Height="25" Content="Compare by Config" Foreground="black" FontSize="14" Grid.Column="3" HorizontalAlignment="Left" Grid.Row="11" VerticalAlignment="Center" Width="170" Click="CompareReports"/>
+
+
+
+
+    <!--  <ListView x:Name="ReportList" FontSize="14" Height="180" Margin="81,10,-203,34" Grid.ColumnSpan="7" Grid.RowSpan="2" Background="White" Grid.Column="1" Visibility="Collapsed"/>  
+    <TextBlock x:Name="ComparisonTypes"  Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Settings to Compare" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="24,10,0,0" Grid.ColumnSpan="2" Visibility="Collapsed"/>
+    
+    -->
+
+    <!--  <Button x:Name="RemoveFile" Content="Remove File" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" RenderTransformOrigin="0.021,0.404" Margin="57,77,0,0" Click="RemoveItem" Grid.ColumnSpan="2"/>
+    
+     <TextBox x:Name="Date" Grid.Row="4" Width="150" Margin="138,8,-117,104" Grid.Column="7"/>
+    -->
+
+    <!--
+        <TextBox x:Name="Nickname" Grid.Row="4" Width="150" Margin="2,10,131,104" Grid.ColumnSpan="6" Grid.Column="2" />
+
+    <TextBlock x:Name="NicknameHeader"  Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="Nickname" FontSize="16" RenderTransformOrigin="-2.267,0.001" Grid.Row="1" Grid.Column="2" Margin="0,97,0,0"/>
+    
+    <TextBlock x:Name="Report_1" Grid.Column="0" Grid.Row="0" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Report List" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="56,2,0,0" Grid.ColumnSpan="2"/>
+    
+     <CheckBox x:Name ="ConfigSelect" Padding="4,0,0,0"  Foreground="White" FontSize="14" Content="Configuration Settings" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="30" Margin="20,53,0,42" Grid.Row="1" Grid.ColumnSpan="2" Visibility="Collapsed"/>
+    <CheckBox x:Name ="ParmSelect" Padding="4,0,0,0"  Foreground="White" FontSize="14" Content="Parameter Settings" VerticalContentAlignment="Center" HorizontalAlignment="Left" Height="30"  Margin="29,32,0,63" Grid.Row="1" Grid.ColumnSpan="2" Visibility="Collapsed"/>
+    <Button x:Name="CompareButton" Content="Compare Reports" Grid.Row="4" Width="139" HorizontalAlignment="Left"  VerticalAlignment="Top"  Foreground="#000080" FontSize="14" Click="Compare" Margin="27,44,0,0" Grid.ColumnSpan="2"/>
+    <TextBlock x:Name="ZipFile1Name" Grid.Column="0" Grid.Row="1"  Foreground="White" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
+    <TextBlock x:Name="ZipFile2Name" Grid.Column="3" Grid.Row="1"  Foreground="White" Margin="0,30,0,0"  HorizontalAlignment="Center" VerticalAlignment="Top" TextWrapping="Wrap" Text="" FontSize="20" RenderTransformOrigin="-2.267,0.001"/>
+        <TextBlock x:Name="DateHeader"  Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Text="Date" FontSize="16" RenderTransformOrigin="-2.267,0.001" Margin="138,97,0,0" Grid.Row="1" Grid.Column="7"/>
+    
+    -->
+
+    <TextBlock x:Name="NicknameHeader" Text="Nickname" Background="black" Foreground="White" Height="20" Width="130" Grid.Column="1" Grid.Row="3" VerticalAlignment="Top" FontSize="14"/>
+    <TextBlock x:Name="ReportsHeader" Text="Reports to Compare" Background="black" FontSize="14" Foreground="White" HorizontalAlignment="Left" Height="20" Width="130" Grid.Column="3" Grid.Row="3" VerticalAlignment="Top"/>
+
+    <TextBox x:Name="Report1Nickname" Height="21" Width="130" Grid.Column="1" Grid.Row="5" />
+    <TextBox x:Name="Report2Nickname" Height="21" Width="130" Grid.Column="1" Grid.Row="7" />
+    <TextBox x:Name="Report3Nickname" Height="21" Width="130" Grid.Column="1" Grid.Row="9" />
+
+    <TextBox x:Name="Report1Upload" Height="21" Width="400" Grid.Column="3" Grid.Row="5" IsReadOnly="true"/>
+    <TextBox x:Name="Report2Upload" Height="21" Width="400" Grid.Column="3" Grid.Row="7" IsReadOnly="true"/>
+    <TextBox x:Name="Report3Upload" Height="21" Width="400" Grid.Column="3" Grid.Row="9" VerticalAlignment="Bottom" IsReadOnly="true"/>
+
+
+
+
+  </Grid>
 
 
 
